--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">InstagramClone</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
     <!-- Paste BOTH strings as required -->
-    <string name="back4app_app_id">Q4oZPsyZff0EaHKx7P79kX9bP2qDnmiDXazTGSvX</string>
-    <string name="back4app_client_key">6PiUSUewsUZhI4sfxXkskh58kiYyEo8Nboi7yWV1</string>
+    <string name="back4app_app_id"></string>
+    <string name="back4app_client_key"></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
